[gd_scene load_steps=5 format=3 uid="uid://chht14i8wfdd2"]

[ext_resource type="Script" path="res://star.gd" id="1_rw05k"]
[ext_resource type="Texture2D" uid="uid://khcet3wa20ic" path="res://art/selector.png" id="2_kdcoi"]
[ext_resource type="Texture2D" uid="uid://byuksb48nyjik" path="res://art/star.png" id="3_7tuw3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gadwh"]
radius = 3.16228

[node name="Star" type="Area2D"]
position = Vector2(106, 82)
script = ExtResource("1_rw05k")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gadwh")

[node name="SelectionSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_kdcoi")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_7tuw3")

[node name="StarTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -26.0
offset_top = 41.0
offset_right = 28.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 32
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="StarTimer" to="." method="_on_star_timer_timeout"]
[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
